fixed the version issue